# muna-rs

./: Cargo.toml  Changelog.md  README.md  build.rs
.github/workflows/: release.yml
src/: client.rs  lib.rs
src/beta/: client.rs  mod.rs  types.rs
src/beta/openai/: chat.rs  completions.rs  embeddings.rs  mod.rs  schema.rs  utils.rs
src/beta/remote/: mod.rs  prediction.rs  remote.rs  types.rs
src/c/: configuration.rs  fxnc.rs  map.rs  mod.rs  prediction.rs  predictor.rs  stream.rs  value.rs
src/services/: local.rs  mod.rs  prediction.rs  predictor.rs  remote.rs  user.rs
src/types/: dtype.rs  mod.rs  parameter.rs  prediction.rs  predictor.rs  user.rs  value.rs
tests/: openai_test.rs  prediction_test.rs  predictor_test.rs  user_test.rs
