[package]
name = "muna"
version = "0.0.1"
edition = "2021"
description = "Run prediction functions in your Rust apps."
license = "Apache-2.0"
repository = "https://github.com/muna-ai/muna-rs"

[dependencies]
async-stream = "0.3"
base64 = "0.22"
futures-core = "0.3"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
