[package]
name = "muna"
version = "0.0.9"
edition = "2021"
description = "Run prediction functions in your Rust apps."
license = "Apache-2.0"
repository = "https://github.com/muna-ai/muna-rs"
homepage = "https://muna.ai"
readme = "README.md"
authors = ["NatML Inc <hi@muna.ai>"]
keywords = ["ai", "machine-learning", "inference", "prediction"]
categories = ["artificial-intelligence", "api-bindings"]
exclude = ["tests/", ".env*", ".vscode/", ".github/"]
links = "Function"

[package.metadata.fxnc]
version = "0.0.43"

[dependencies]
async-stream = "0.3"
base64 = "0.22"
futures-core = "0.3"
home = "0.5.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "fs", "io-util"] }
url = "2.5.8"

[build-dependencies]
ureq = "3"

[dev-dependencies]
dotenvy = "0.15.7"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
